assistant-iot-analysis/analysis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analysis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analysis
  template:
    metadata:
      labels:
        app: analysis
    spec:
      containers:
      - name: analysis
        image: lizabatache/assistant-iot-analysis:latest
        ports:
        - containerPort: 4000
