assistant-iot-analysis/analysis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analysis-service
spec:
  selector:
    app: analysis
  ports:
    - port: 4000
      targetPort: 4000
